--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>My Portfolio</h1>
+    <h1 data-text="MyPortfolio">MyPortfolio</h1>
     <div class="container">
         <div class="box">
             <div class="cube"></div>
