--- a/index.html
+++ b/index.html
@@ -7,11 +7,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 data-text="MyPortfolio">MyPortfolio</h1>
-    <div class="container">
-        <div class="box">
-            <div class="cube"></div>
+    <header>
+        <div class="rotating_cube">
+            <div class="top"></div>
+            <div>
+                <span style="--i:0;"></span>
+                <span style="--i:1;"></span>
+                <span style="--i:2;"></span>
+                <span style="--i:3;"></span>
+            </div>
         </div>
-    </div>
+        <h1 data-text="MyPortfolio">MyPortfolio</h1>
+        <div class="rotating_cube">
+            <div class="top"></div>
+            <div>
+                <span style="--i:0;"></span>
+                <span style="--i:1;"></span>
+                <span style="--i:2;"></span>
+                <span style="--i:3;"></span>
+            </div>
+        </div>
+    </header>
+    
+    <section>
+        <div class="container">
+            <div class="box">
+                <div class="cube"></div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
