--- a/index.html
+++ b/index.html
@@ -7,34 +7,36 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <div class="rotating_cube">
-            <div class="top"></div>
-            <div>
-                <span style="--i:0;"></span>
-                <span style="--i:1;"></span>
-                <span style="--i:2;"></span>
-                <span style="--i:3;"></span>
+    <div class="body">
+        <header class="div-header">
+            <div class="rotating_cube">
+                <div class="top"></div>
+                <div>
+                    <span style="--i:0;"></span>
+                    <span style="--i:1;"></span>
+                    <span style="--i:2;"></span>
+                    <span style="--i:3;"></span>
+                </div>
             </div>
-        </div>
-        <h1 data-text="MyPortfolio">MyPortfolio</h1>
-        <div class="rotating_cube">
-            <div class="top"></div>
-            <div>
-                <span style="--i:0;"></span>
-                <span style="--i:1;"></span>
-                <span style="--i:2;"></span>
-                <span style="--i:3;"></span>
+            <h1 class="MyPortfolio-h1" data-text="MyPortfolio"><a class="MyPortfolio-a" href="portfolio.html">MyPortfolio</a></h1>
+            <div class="rotating_cube">
+                <div class="top"></div>
+                <div>
+                    <span style="--i:0;"></span>
+                    <span style="--i:1;"></span>
+                    <span style="--i:2;"></span>
+                    <span style="--i:3;"></span>
+                </div>
             </div>
-        </div>
-    </header>
-    
-    <section>
-        <div class="container">
-            <div class="box">
-                <div class="cube"></div>
+        </header>
+        
+        <section class="div-section">
+            <div class="div-box-container">
+                <div class="box">
+                    <div class="cube"></div>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </div>
 </body>
 </html>
