add hero section

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-    <div class="bloc"></div>
     <header class="header">
         <a href="#">
             <div class="logo-container">
@@ -65,6 +64,38 @@
             </div>
         </div>
     </header>
+    <div class="container">
+        <section class="slide hero">
+            <div class="content">
+                <h2 class="text_slide">
+                    <span class="first-text"><span class="second-color">Concepteur</span> et</span> 
+                    <span class="second-text"><span class="main-color">Développeur</span> web </span>
+                    <div class="content-third-text">
+                        <span class="third-text">Freelance</span>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ornare sit amet sapien lobortis feugiat. </p>
+                    </div>
+                </h2>
+            </div>
+            <div class="btn-scroll">
+                <svg width="52" height="52" viewBox="0 0 74 74" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M45.963 44.8135C46.7246 44.052 47.9592 44.052 48.7207 44.8135C49.4823 45.5751 49.4823 46.8097 48.7207 47.5712L38.6091 57.6829C37.8476 58.4444 36.6129 58.4444 35.8514 57.6829L25.7398 47.5712C24.9783 46.8097 24.9783 45.5751 25.7398 44.8135C26.5013 44.052 27.736 44.052 28.4975 44.8135L35.2803 51.5963L35.2803 17.696C35.2803 16.619 36.1533 15.746 37.2303 15.746C38.3072 15.746 39.1803 16.619 39.1803 17.696L39.1803 51.5963L45.963 44.8135Z" fill="white"/>
+                </svg>
+            </div>
+        </section>
+    
+    <section class="slide slide-1">
+        <h2 class="text_slide">Slide 1</h2>
+    </section>
+    <section class="slide slide-2">
+        <h2 class="text_slide">Slide 2</h2>
+    </section>
+    <section class="slide slide-3">
+        <h2 class="text_slide">Slide 3</h2>
+    </section>
+    <section class="slide slide-4">
+        <h2 class="text_slide">Slide 4</h2>
+    </section>
+</div>
 </body>
 
 </html>
